# icq

./: CMakeLists.txt  README.md
buildsystem/: build_xcode.sh  build_xcode_release.sh  buildcmake.bat  buildcmake.py  clean.sh  make_vc_2017.bat  make_vc_2017_agent.bat  make_vc_2017_release.bat  make_vc_2017_release_agent.bat  make_vc_2017_xp141.bat  make_vc_2017_xp141_agent.bat  make_vc_2017_xp141_release.bat  make_vc_2017_xp141_release_agent.bat  make_xcode.sh  make_xcode_release.sh  version.py
common.shared/: common.h  common_defs.h  constants.h  keys.h  version_info.h
common.shared/message_processing/: message_tokenizer.cpp  message_tokenizer.h
common.shared/url_parser/: url_parser.cpp  url_parser.h
common.shared/win32/: crash_handler.cpp  crash_handler.h
core/: CMakeLists.txt  async_task.cpp  async_task.h  core.cpp  core.h  core_settings.cpp  core_settings.h  crash_sender.cpp  curl_context.cpp  curl_context.h  curl_handler.cpp  curl_handler.h  debug_helper.natvis  gui_settings.cpp  http_request.cpp  http_request.h  main_thread.cpp  namespaces.h  network_log.cpp  proxy_settings.cpp  proxy_settings.h  scheduler.cpp  scheduler.h  statistics.cpp  statistics.h  stdafx.h  utils.cpp  utils.h
core/Voip/: VoipManager.cpp  VoipManager.h  VoipManagerDefines.h  VoipSerialization.h
core/archive/: archive_index.cpp  archive_index.h  contact_archive.cpp  contact_archive.h  dlg_state.cpp  dlg_state.h  history_message.cpp  history_message.h  image_cache.cpp  image_cache.h  local_history.cpp  local_history.h  mentions_me.cpp  mentions_me.h  messages_data.cpp  not_sent_messages.cpp  storage.cpp  (+2 more)
corelib/: CMakeLists.txt  collection.cpp  collection.h  collection_helper.h  core_face.h  enumerations.h
coretest/: coretest.cpp
gui/: CMakeLists.txt  app_config.cpp  app_config.h  core_dispatcher.cpp  core_dispatcher.h  fonts.cpp  fonts.h  gui_settings.cpp  gui_settings.h  my_info.cpp  remote_proc.cpp  resource.qrc  stdafx.h  theme_settings.cpp  theme_settings.h
gui.shared/: constants.h  translator_base.cpp  translator_base.h
installer/: CMakeLists.txt  installer.vcxproj  installer_agent.sln  main.cpp  stdafx.h
installer/resources/styles/: styles.qss
installer/translations/: ar.ts  cs.ts  de.ts  en.ts  fr.ts  pt.ts  ru.ts  uk.ts
installer/ui/main_window/pages/: account_selector.cpp  error_page.cpp  start_page.cpp
installer/utils/links/: shell_link.cpp
(+632 files in other folders)
